--- a/pickHistoryAnalysis.ipynb
+++ b/pickHistoryAnalysis.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'pickHistoryOrderNo.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[41], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcsv\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# Removes all none ASCII characters and replaces them with spaces\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mpickHistoryOrderNo.csv\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m, encoding\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mutf-8\u001b[39;49m\u001b[39m'\u001b[39;49m, errors\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mignore\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m file_in, \u001b[39mopen\u001b[39m(\u001b[39m'\u001b[39m\u001b[39moutput_file.csv\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mw\u001b[39m\u001b[39m'\u001b[39m, newline\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m, encoding\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m file_out:\n\u001b[1;32m      5\u001b[0m     reader \u001b[39m=\u001b[39m csv\u001b[39m.\u001b[39mreader(file_in)\n\u001b[1;32m      6\u001b[0m     writer \u001b[39m=\u001b[39m csv\u001b[39m.\u001b[39mwriter(file_out)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    277\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    278\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    279\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    281\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    282\u001b[0m     )\n\u001b[0;32m--> 284\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'pickHistoryOrderNo.csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
@@ -42,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +37,7 @@
     "\n",
     "import csv\n",
     "\n",
-    "with open('leanPicks.csv', 'r', encoding='utf-8', errors='ignore') as file_in, open('output_file.csv', 'w', newline='', encoding='utf-8') as file_out:\n",
+    "with open('output_file.csv', 'r', encoding='utf-8', errors='ignore') as file_in, open('leanPicks.csv', 'w', newline='', encoding='utf-8') as file_out:\n",
     "    reader = csv.reader(file_in, delimiter='\\t')\n",
     "    writer = csv.writer(file_out)\n",
     "\n",
@@ -67,43 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ISELL_ORDER_NUMBER',\n",
-       " 'PICK_ID',\n",
-       " 'ARTNO',\n",
-       " 'ARTNAME_UNICODE',\n",
-       " 'ART_VOLUME_M3',\n",
-       " 'ORDERED_QTY',\n",
-       " 'PICKED_QTY',\n",
-       " 'OPEN_PICK_QTY',\n",
-       " 'AVAILABLE_STOCK',\n",
-       " 'POSSIBLE_TO_FINISH',\n",
-       " 'ORDER_TYPE',\n",
-       " 'DATE_OF_PAYMENT',\n",
-       " 'TIME_OF_PAYMENT',\n",
-       " 'EXCEPTION',\n",
-       " 'PICK_AREA',\n",
-       " 'ACTUAL_ORDER_STATUS',\n",
-       " 'STORAGE_STATUS',\n",
-       " 'STORAGE_USED',\n",
-       " 'HANDOVER_POINT',\n",
-       " 'CUT_OFF_DATE',\n",
-       " 'CUT_OFF_TIME',\n",
-       " 'USER_PICKING',\n",
-       " 'SERVICE_DATE',\n",
-       " 'SERVICE_WINDOW',\n",
-       " 'ORDER_METHOD',\n",
-       " 'PICK_LOCATION',\n",
-       " 'PICK_LOCATION_TYPE',\n",
-       " 'DELIVERY_METHOD']"
+       "['ISELL_ORDER_NUMBER\\tPICK_ID\\tARTNO   \\tARTNAME_UNICODE                                   \\tART_VOLUME_M3\\tORDERED_QTY\\tPICKED_QTY\\tOPEN_PICK_QTY\\tAVAILABLE_STOCK\\tPOSSIBLE_TO_FINISH\\tORDER_TYPE \\tDATE_OF_PAYMENT\\tTIME_OF_PAYMENT\\tEXCEPTION\\tPICK_AREA          \\tACTUAL_ORDER_STATUS\\tSTORAGE_STATUS\\tSTORAGE_USED\\tHANDOVER_POINT\\tCUT_OFF_DATE\\tCUT_OFF_TIME\\tUSER_PICKING\\tSERVICE_DATE\\tSERVICE_WINDOW\\tORDER_METHOD\\tPICK_LOCATION\\tPICK_LOCATION_TYPE\\tDELIVERY_METHOD                  ']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,15 +79,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a new csv that contains only the columns we are interested in\n",
+    "\n",
     "# Read csv file and select columns of interest\n",
-    "df = pd.read_csv('output_file.csv', usecols=['ISELL_ORDER_NUMBER', 'PICK_ID', 'ARTNAME_UNICODE', 'ORDER_TYPE', 'PICK_AREA'])\n",
+    "df = pd.read_csv('leanPicks.csv', usecols=['ISELL_ORDER_NUMBER', 'PICK_ID', 'ARTNAME_UNICODE', 'ORDER_TYPE', 'PICK_AREA', 'ARTNO'])\n",
     "\n",
     "# Write the selected columns to a new csv file\n",
     "df.to_csv('output_file.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read csv file\n",
+    "df = pd.read_csv('output_file.csv')\n",
+    "\n",
+    "# Convert ARTNO to string\n",
+    "df['ARTNO'] = df['ARTNO'].astype(str)\n",
+    "\n",
+    "# Group by order number and concatenate article numbers\n",
+    "orders = df.groupby('ISELL_ORDER_NUMBER')['ARTNO'].apply(lambda x: ','.join(x)).reset_index()\n",
+    "\n",
+    "# Rename columns\n",
+    "orders.columns = ['order_number', 'articles']\n",
+    "\n",
+    "# Write to new csv file\n",
+    "orders.to_csv('orders.csv', index=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('orders.csv', 'r') as csvfile:\n",
+    "    csvreader = csv.reader(csvfile)\n",
+    "    with open('strippedOrders.csv', 'w', newline='') as newfile:\n",
+    "        csvwriter = csv.writer(newfile)\n",
+    "\n",
+    "        for row in csvreader:\n",
+    "            newrow = [cell.replace('\"', '') for cell in row]\n",
+    "            csvwriter.writerow(newrow)\n"
    ]
   }
  ],
