correlation between articles mapped

--- a/pickHistoryAnalysis.ipynb
+++ b/pickHistoryAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "['ISELL_ORDER_NUMBER\\tPICK_ID\\tARTNO   \\tARTNAME_UNICODE                                   \\tART_VOLUME_M3\\tORDERED_QTY\\tPICKED_QTY\\tOPEN_PICK_QTY\\tAVAILABLE_STOCK\\tPOSSIBLE_TO_FINISH\\tORDER_TYPE \\tDATE_OF_PAYMENT\\tTIME_OF_PAYMENT\\tEXCEPTION\\tPICK_AREA          \\tACTUAL_ORDER_STATUS\\tSTORAGE_STATUS\\tSTORAGE_USED\\tHANDOVER_POINT\\tCUT_OFF_DATE\\tCUT_OFF_TIME\\tUSER_PICKING\\tSERVICE_DATE\\tSERVICE_WINDOW\\tORDER_METHOD\\tPICK_LOCATION\\tPICK_LOCATION_TYPE\\tDELIVERY_METHOD                  ']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1387,170 +1387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "00257298\n",
-      "8\n",
-      "90277961\n",
-      "7\n",
-      "50335618\n",
-      "1\n",
-      "90510945\n",
-      "1\n",
-      "40256895\n",
-      "11\n",
-      "60263244\n",
-      "3\n",
-      "30256891\n",
-      "26\n",
-      "80214549\n",
-      "3\n",
-      "60403602\n",
-      "2\n",
-      "10446883\n",
-      "3\n",
-      "80256940\n",
-      "4\n",
-      "10368489\n",
-      "3\n",
-      "00421185\n",
-      "1\n",
-      "00103343\n",
-      "1\n",
-      "50518910\n",
-      "1\n",
-      "40501892\n",
-      "2\n",
-      "00347510\n",
-      "1\n",
-      "30404028\n",
-      "3\n",
-      "90404822\n",
-      "2\n",
-      "70256931\n",
-      "3\n",
-      "60529084\n",
-      "2\n",
-      "80509481\n",
-      "1\n",
-      "70277995\n",
-      "3\n",
-      "30275861\n",
-      "2\n",
-      "30277959\n",
-      "18\n",
-      "50257253\n",
-      "1\n",
-      "60342656\n",
-      "1\n",
-      "10333065\n",
-      "1\n",
-      "70534645\n",
-      "2\n",
-      "60246396\n",
-      "3\n",
-      "20484817\n",
-      "1\n",
-      "70277957\n",
-      "21\n",
-      "80534372\n",
-      "1\n",
-      "70214564\n",
-      "5\n",
-      "80331930\n",
-      "6\n",
-      "00214505\n",
-      "19\n",
-      "40211977\n",
-      "3\n",
-      "90256893\n",
-      "12\n",
-      "50334303\n",
-      "1\n",
-      "70214559\n",
-      "12\n",
-      "30263245\n",
-      "18\n",
-      "20246708\n",
-      "3\n",
-      "00257302\n",
-      "3\n",
-      "40277992\n",
-      "4\n",
-      "20519888\n",
-      "2\n",
-      "10446557\n",
-      "2\n",
-      "90338417\n",
-      "1\n",
-      "40458191\n",
-      "1\n",
-      "10257306\n",
-      "8\n",
-      "20207410\n",
-      "6\n",
-      "10357004\n",
-      "4\n",
-      "30246722\n",
-      "3\n",
-      "20329195\n",
-      "1\n",
-      "50357002\n",
-      "4\n",
-      "90429771\n",
-      "1\n",
-      "50404032\n",
-      "3\n",
-      "10246308\n",
-      "10\n",
-      "60442383\n",
-      "6\n",
-      "80257261\n",
-      "1\n",
-      "30460811\n",
-      "1\n",
-      "60533057\n",
-      "1\n",
-      "70529088\n",
-      "2\n",
-      "10211276\n",
-      "2\n",
-      "50518477\n",
-      "2\n",
-      "70404026\n",
-      "2\n",
-      "10529086\n",
-      "1\n",
-      "00392461\n",
-      "2\n",
-      "20320802\n",
-      "1\n",
-      "20246360\n",
-      "3\n",
-      "70346932\n",
-      "5\n",
-      "70257638\n",
-      "4\n",
-      "70246386\n",
-      "5\n",
-      "70403606\n",
-      "1\n",
-      "40256942\n",
-      "1\n",
-      "90246352\n",
-      "9\n",
-      "50308196\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Find the correlation between two articles \n",
+    "import csv\n",
+    "import pandas as pd\n",
     "\n",
     "# Must be stored as string\n",
     "seen = ['20214566']\n",
@@ -1558,7 +1400,7 @@
     "df = pd.read_csv('orders.csv')\n",
     "\n",
     "# Gets all picks that contain a certain article\n",
-    "def findCorrelation(df, x):\n",
+    "def findPicksWithArticle(df, x):\n",
     "    # Filter the DataFrame to only include rows where the 'articles' column contains the specified value\n",
     "    filtered_df = df[df['articles'].str.contains(x, na=False, case=False)]\n",
     "    # Select the 'articles' column from the filtered DataFrame and return it\n",
@@ -1575,33 +1417,68 @@
     "\n",
     "    return relevant_picks\n",
     "\n",
+    "# Returns the number of picks with an occurrence of an article\n",
+    "def findArticleOccurrences(picks, article):\n",
+    "    occurrences = 0\n",
     "\n",
-    "input = '20214566'\n",
+    "    for pick in picks:\n",
+    "        if article in pick:\n",
+    "            occurrences += 1\n",
     "\n",
-    "XPicks = findCorrelation(df, input)\n",
-    "uniqueArticles = set()\n",
+    "    return occurrences\n",
     "\n",
-    "# Creates a set of unique articles in all picks for article x\n",
-    "for order in XPicks:\n",
-    "    for article in order:\n",
-    "        uniqueArticles.add(article)\n",
+    "def findCorrelation(df, article):\n",
+    "    XPicks = findPicksWithArticle(df, article)\n",
     "\n",
-    "# Removes the article that is the focus of the pick as r=1\n",
-    "uniqueArticles.remove(input)\n",
+    "    unique_articles = set()\n",
     "\n",
-    "# Find how many occurances there \n",
-    "for article in uniqueArticles:\n",
-    "    print(article)\n",
-    "    print(\"There are \",len(findCorrelation(df, article)), \" occurances of article \", article)\n",
-    "    \n",
+    "    for order in XPicks:\n",
+    "        for item in order:\n",
+    "            unique_articles.add(item)\n",
     "\n",
+    "    unique_articles.remove(article)\n",
     "\n",
+    "    # Create an empty dictionary to store the correlation values for each article pair\n",
+    "    correlation_dict = {}\n",
     "\n",
-    "# for pick in findCorrelation(df, '20214566'):\n",
-    "#     for article in pick: \n",
-    "#         if article not in seen:\n",
-    "#             print(article)\n",
-    "#             seen.append(article)\n"
+    "    for item in unique_articles:\n",
+    "        # Find all occurrences of item in the set of all picks containing the article\n",
+    "        subOccurrences = findArticleOccurrences(XPicks, item)\n",
+    "        # Express as a probability\n",
+    "        correlation = round((subOccurrences / len(XPicks)), 4) * subOccurrences\n",
+    "        # Add the calculated correlation value to the dictionary with the article pair as the key\n",
+    "        correlation_dict[(article, item)] = correlation\n",
+    "\n",
+    "    return correlation_dict\n",
+    "\n",
+    "with open('unique_articles.csv') as file_obj:\n",
+    "    correlation_obj = {}\n",
+    "    # Create reader object \n",
+    "    reader_obj = csv.reader(file_obj)\n",
+    "\n",
+    "    # Iterate over each row in the csv\n",
+    "    next(file_obj)\n",
+    "    for row in reader_obj:\n",
+    "        article_name = row[0]\n",
+    "        correlation_values = findCorrelation(df, article_name)\n",
+    "        XPicksLength = len(findPicksWithArticle(df, article_name))\n",
+    "\n",
+    "        # Multiply the correlation value by XPicksLength for each row in the dictionary\n",
+    "        for article_pair, correlation in correlation_values.items():\n",
+    "            correlation_values[article_pair] = correlation * XPicksLength\n",
+    "\n",
+    "        if correlation_values:\n",
+    "            correlation_obj.update(correlation_values)\n",
+    "\n",
+    "# Create a correlation matrix and add new column\n",
+    "corr_matrix = pd.DataFrame.from_dict(correlation_obj, orient='index')\n",
+    "corr_matrix.columns = ['Correlation']\n",
+    "\n",
+    "# Create separate columns for articles\n",
+    "corr_matrix[['Article 1', 'Article 2']] = pd.DataFrame(corr_matrix.index.tolist(), index=corr_matrix.index)\n",
+    "\n",
+    "# Write correlation matrix to CSV file\n",
+    "corr_matrix.to_csv('correlation_matrix.csv', index=False)\n"
    ]
   }
  ],
