correlation matrix constructed

--- a/pickHistoryAnalysis.ipynb
+++ b/pickHistoryAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "['ISELL_ORDER_NUMBER\\tPICK_ID\\tARTNO   \\tARTNAME_UNICODE                                   \\tART_VOLUME_M3\\tORDERED_QTY\\tPICKED_QTY\\tOPEN_PICK_QTY\\tAVAILABLE_STOCK\\tPOSSIBLE_TO_FINISH\\tORDER_TYPE \\tDATE_OF_PAYMENT\\tTIME_OF_PAYMENT\\tEXCEPTION\\tPICK_AREA          \\tACTUAL_ORDER_STATUS\\tSTORAGE_STATUS\\tSTORAGE_USED\\tHANDOVER_POINT\\tCUT_OFF_DATE\\tCUT_OFF_TIME\\tUSER_PICKING\\tSERVICE_DATE\\tSERVICE_WINDOW\\tORDER_METHOD\\tPICK_LOCATION\\tPICK_LOCATION_TYPE\\tDELIVERY_METHOD                  ']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1397,7 +1397,7 @@
     "# Must be stored as string\n",
     "seen = ['20214566']\n",
     "\n",
-    "df = pd.read_csv('orders.csv')\n",
+    "df = pd.read_csv('orders.csv', dtype={'articles': str})\n",
     "\n",
     "# Gets all picks that contain a certain article\n",
     "def findPicksWithArticle(df, x):\n",
@@ -1479,6 +1479,18 @@
     "\n",
     "# Write correlation matrix to CSV file\n",
     "corr_matrix.to_csv('correlation_matrix.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"correlation_matrix.csv\")\n",
+    "\n",
+    "sorted_df = df.sort_values(by=[\"Correlation\"], ascending=False)\n",
+    "sorted_df.to_csv('correlation_matrix.csv', index=False)"
    ]
   }
  ],
