Data prepared for RL method

--- a/pickHistoryAnalysis.ipynb
+++ b/pickHistoryAnalysis.ipynb
@@ -2291,13 +2291,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Read the pickHistoryOrderNo.csv file as a DataFrame\n",
+    "# Read output_file.csv as a DataFrame\n",
     "df = pd.read_csv('output_file.csv', dtype={\"ARTNO\": str})\n",
     "\n",
     "# Create an empty dictionary to store the article pick count\n",
@@ -2331,10 +2331,114 @@
     "        popularity_list.append(article_count_dict[article])\n",
     "\n",
     "# Create a DataFrame with the search keys and corresponding popularity values as separate columns\n",
-    "df_popularity = pd.DataFrame({'article': article_list, 'popularity': popularity_list})\n",
+    "df_popularity = pd.DataFrame({'ARTNO': article_list, 'popularity': popularity_list})\n",
     "\n",
     "# Write the DataFrame to a new 'popularity.csv' file\n",
     "df_popularity.to_csv('popularity.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# load the pickHistoryOrderNo.csv file as a dataframe with the correct encoding\n",
+    "df = pd.read_csv('leanPicks.csv', encoding='iso-8859-1', on_bad_lines=\"skip\")\n",
+    "\n",
+    "# group the dataframe by 'ARTNO'\n",
+    "artno_groups = df.groupby('ARTNO')\n",
+    "\n",
+    "# initialize an empty list to store the results\n",
+    "results = []\n",
+    "\n",
+    "# iterate over each group and calculate the probabilities\n",
+    "for artno, group_df in artno_groups:\n",
+    "    num_truck = group_df[group_df['ORDER_TYPE'] == 'Truck'].shape[0]\n",
+    "    num_collect = group_df[group_df['ORDER_TYPE'] == 'Collect'].shape[0]\n",
+    "    total_rows = group_df.shape[0]\n",
+    "    \n",
+    "    # calculate the probabilities for each group\n",
+    "    prob_truck = num_truck / total_rows\n",
+    "    prob_collect = num_collect / total_rows\n",
+    "    prob_other = 1 - prob_truck - prob_collect\n",
+    "    \n",
+    "    # store the results for each group as a dictionary\n",
+    "    results.append({'ARTNO': artno, 'TRUCK': prob_truck, 'COLLECT': prob_collect, 'OTHER': prob_other})\n",
+    "\n",
+    "# convert the list of dictionaries to a dataframe\n",
+    "result_df = pd.DataFrame(results)\n",
+    "\n",
+    "# write the dataframe to a new CSV file\n",
+    "result_df.to_csv('probability_results.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# load the probability_results.csv and popularity.csv files as dataframes\n",
+    "prob_df = pd.read_csv('probability_results.csv')\n",
+    "pop_df = pd.read_csv('popularity.csv')\n",
+    "\n",
+    "# merge the two dataframes on the ARTNO column\n",
+    "merged_df = pd.merge(prob_df, pop_df, on='ARTNO')\n",
+    "\n",
+    "# select the desired columns and rename them\n",
+    "new_df = merged_df[['ARTNO', 'popularity', 'TRUCK', 'COLLECT']].rename(columns={'TRUCK': 'Truck', 'COLLECT': 'Collect'})\n",
+    "\n",
+    "# write the dataframe to a new CSV file\n",
+    "new_df.to_csv('article_data.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# load the article_data.csv and correlation_matrix.csv files as dataframes\n",
+    "data_df = pd.read_csv('article_data.csv')\n",
+    "corr_df = pd.read_csv('correlation_matrix.csv')\n",
+    "\n",
+    "# initialize an empty list to store the result dictionaries\n",
+    "result = []\n",
+    "\n",
+    "# iterate through each row in data_df and create result dictionary\n",
+    "for index, row in data_df.iterrows():\n",
+    "    artno = row['ARTNO']\n",
+    "    popularity = row['popularity']\n",
+    "    truck = row['Truck']\n",
+    "    collect = row['Collect']\n",
+    "    correlations = {}\n",
+    "    \n",
+    "    # find all the correlation values associated with the artno\n",
+    "    corr_values1 = corr_df[corr_df['Article 1']==artno]\n",
+    "    corr_values2 = corr_df[corr_df['Article 2']==artno]\n",
+    "    corr_values = pd.concat([corr_values1, corr_values2])\n",
+    "    \n",
+    "    # create a dictionary of ARTNO and corresponding correlation value\n",
+    "    for index_corr, row_corr in corr_values.iterrows():\n",
+    "        if row_corr['Article 1'] == artno:\n",
+    "            correlations[str(row_corr['Article 2'])] = row_corr['Correlation']\n",
+    "        else:\n",
+    "            correlations[str(row_corr['Article 1'])] = row_corr['Correlation']\n",
+    "    \n",
+    "    # append the result dictionary to the results list\n",
+    "    result.append({'ARTNO': artno, 'popularity': popularity, 'Truck': truck, 'Collect': collect, 'Correlations': correlations})\n",
+    "\n",
+    "# write the result list to a new CSV file\n",
+    "result_df = pd.DataFrame(result)\n",
+    "result_df.to_csv('article_data_with_correlations.csv', index=False)\n",
+    "\n"
    ]
   }
  ],
