Moved all data to data folder

--- a/pickHistoryAnalysis.ipynb
+++ b/pickHistoryAnalysis.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "\n",
     "# Removes all none ASCII characters and replaces them with spaces\n",
-    "with open('pickHistoryOrderNo.csv', 'r', encoding='utf-8', errors='ignore') as file_in, open('output_file.csv', 'w', newline='', encoding='utf-8') as file_out:\n",
+    "with open('data/pickHistoryOrderNo.csv', 'r', encoding='utf-8', errors='ignore') as file_in, open('data/output_file.csv', 'w', newline='', encoding='utf-8') as file_out:\n",
     "    reader = csv.reader(file_in)\n",
     "    writer = csv.writer(file_out)\n",
     "\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "\n",
     "import csv\n",
     "\n",
-    "with open('output_file.csv', 'r', encoding='utf-8', errors='ignore') as file_in, open('leanPicks.csv', 'w', newline='', encoding='utf-8') as file_out:\n",
+    "with open('data/output_file.csv', 'r', encoding='utf-8', errors='ignore') as file_in, open('data/leanPicks.csv', 'w', newline='', encoding='utf-8') as file_out:\n",
     "    reader = csv.reader(file_in, delimiter='\\t')\n",
     "    writer = csv.writer(file_out)\n",
     "\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "['ISELL_ORDER_NUMBER\\tPICK_ID\\tARTNO   \\tARTNAME_UNICODE                                   \\tART_VOLUME_M3\\tORDERED_QTY\\tPICKED_QTY\\tOPEN_PICK_QTY\\tAVAILABLE_STOCK\\tPOSSIBLE_TO_FINISH\\tORDER_TYPE \\tDATE_OF_PAYMENT\\tTIME_OF_PAYMENT\\tEXCEPTION\\tPICK_AREA          \\tACTUAL_ORDER_STATUS\\tSTORAGE_STATUS\\tSTORAGE_USED\\tHANDOVER_POINT\\tCUT_OFF_DATE\\tCUT_OFF_TIME\\tUSER_PICKING\\tSERVICE_DATE\\tSERVICE_WINDOW\\tORDER_METHOD\\tPICK_LOCATION\\tPICK_LOCATION_TYPE\\tDELIVERY_METHOD                  ']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,28 +73,28 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"output_file.csv\", on_bad_lines=\"skip\")\n",
+    "df = pd.read_csv(\"data/output_file.csv\", on_bad_lines=\"skip\")\n",
     "df.columns.values.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a new csv that contains only the columns we are interested in\n",
     "\n",
     "# Read the CSV file into a DataFrame and specify a custom data type for the 'ARTNO' column\n",
-    "df = pd.read_csv('leanPicks.csv', usecols=['ISELL_ORDER_NUMBER', 'PICK_ID', 'ARTNAME_UNICODE', 'ORDER_TYPE', 'PICK_AREA', 'ARTNO'], dtype={'ARTNO': str})\n",
+    "df = pd.read_csv('data/leanPicks.csv', usecols=['ISELL_ORDER_NUMBER', 'PICK_ID', 'ARTNAME_UNICODE', 'ORDER_TYPE', 'PICK_AREA', 'ARTNO'], dtype={'ARTNO': str})\n",
     "\n",
     "# Write the selected columns to a new CSV file\n",
-    "df.to_csv('output_file.csv', index=False)\n"
+    "df.to_csv('data/output_file.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read csv file\n",
-    "df = pd.read_csv('output_file.csv', dtype={'ARTNO': str})\n",
+    "df = pd.read_csv('data/output_file.csv', dtype={'ARTNO': str})\n",
     "\n",
     "# Convert ARTNO to string\n",
     "df['ARTNO'] = df['ARTNO'].astype(str)\n",
@@ -115,13 +115,13 @@
     "orders.columns = ['order_number', 'articles']\n",
     "\n",
     "# Write to new csv file\n",
-    "orders.to_csv('orders.csv', index=False)\n",
+    "orders.to_csv('data/orders.csv', index=False)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,9 +129,9 @@
     "import csv\n",
     "\n",
     "\n",
-    "with open('orders.csv', 'r') as csvfile:\n",
+    "with open('data/orders.csv', 'r') as csvfile:\n",
     "    csvreader = csv.reader(csvfile)\n",
-    "    with open('strippedOrders.csv', 'w', newline='') as newfile:\n",
+    "    with open('data/strippedOrders.csv', 'w', newline='') as newfile:\n",
     "        csvwriter = csv.writer(newfile)\n",
     "\n",
     "        for row in csvreader:\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
     "\n",
     "x = 1345368239\n",
     "\n",
-    "df = pd.read_csv('strippedOrders.csv', dtype={'ARTNO': str})\n",
+    "df = pd.read_csv('data/strippedOrders.csv', dtype={'ARTNO': str})\n",
     "\n",
     "filtered_df = df[df['order_number'] == x]\n",
     "\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,12 +182,12 @@
     "unique_articles = df['articles'].unique().tolist()\n",
     "\n",
     "# Write the list of unique articles to a new CSV file\n",
-    "pd.DataFrame({'articles': unique_articles}).to_csv('unique_articles.csv', index=False)"
+    "pd.DataFrame({'articles': unique_articles}).to_csv('data/unique_articles.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1372,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read the CSV file into a DataFrame\n",
-    "df = pd.read_csv('unique_articles.csv')\n",
+    "df = pd.read_csv('data/unique_articles.csv')\n",
     "\n",
     "# Preprocess the 'ARTNO' column to add leading zeroes to the column values\n",
     "df['articles'] = df['articles'].apply(lambda x: f'{x:0>8}')\n",
@@ -1380,14 +1380,14 @@
     "# Iterate through each row of the DataFrame and each column of the row, and print the value of each cell\n",
     "for index, row in df.iterrows():\n",
     "    for column, value in row.items():\n",
-    "        orderdf = pd.read_csv('orders.csv')\n",
+    "        orderdf = pd.read_csv('data/orders.csv')\n",
     "        filtered_df = orderdf[orderdf['articles'].str.contains(value, na=False, case=False)]\n",
     "        print(\"picks containing \", value, filtered_df['articles'].values)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1398,7 @@
     "# Must be stored as string\n",
     "seen = ['20214566']\n",
     "\n",
-    "df = pd.read_csv('orders.csv', dtype={'articles': str})\n",
+    "df = pd.read_csv('data/orders.csv', dtype={'articles': str})\n",
     "\n",
     "# Gets all picks that contain a certain article\n",
     "def findPicksWithArticle(df, x):\n",
@@ -1452,7 +1452,7 @@
     "\n",
     "    return correlation_dict\n",
     "\n",
-    "with open('unique_articles.csv') as file_obj:\n",
+    "with open('data/unique_articles.csv') as file_obj:\n",
     "    correlation_obj = {}\n",
     "    # Create reader object \n",
     "    reader_obj = csv.reader(file_obj)\n",
@@ -1479,25 +1479,25 @@
     "corr_matrix[['Article 1', 'Article 2']] = pd.DataFrame(corr_matrix.index.tolist(), index=corr_matrix.index)\n",
     "\n",
     "# Write correlation matrix to CSV file\n",
-    "corr_matrix.to_csv('correlation_matrix.csv', index=False)\n"
+    "corr_matrix.to_csv('data/correlation_matrix.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sort the correlation matrix in a descending fashion based on correlation\n",
-    "df = pd.read_csv(\"correlation_matrix.csv\")\n",
+    "df = pd.read_csv(\"data/correlation_matrix.csv\")\n",
     "\n",
     "sorted_df = df.sort_values(by=[\"Correlation\"], ascending=False)\n",
-    "sorted_df.to_csv('correlation_matrix.csv', index=False)"
+    "sorted_df.to_csv('data/correlation_matrix.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2256,7 +2256,7 @@
     "# List all of the most popular items\n",
     "\n",
     "# Read the pickHistoryOrderNo.csv file as a DataFrame\n",
-    "df = pd.read_csv('output_file.csv', dtype={\"ARTNO\": str})\n",
+    "df = pd.read_csv('data/output_file.csv', dtype={\"ARTNO\": str})\n",
     "\n",
     "# Create an empty dictionary to store the article pick count\n",
     "article_count_dict = {}\n",
@@ -2279,26 +2279,26 @@
     "for article, count in sorted_article_count:\n",
     "    print(f\"{article}: {count}\")\n",
     "\n",
-    "df_popularity = pd.read_csv('popularity.csv')\n",
+    "df_popularity = pd.read_csv('data/popularity.csv')\n",
     "\n",
     "# Sort the DataFrame in descending order based on the 'popularity' column\n",
     "df_popularity = df_popularity.sort_values(by=['popularity'], ascending=False)\n",
     "\n",
     "# Write the sorted DataFrame back to the 'popularity.csv' file\n",
-    "df_popularity.to_csv('popularity.csv', index=False)\n",
+    "df_popularity.to_csv('data/popularity.csv', index=False)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Read output_file.csv as a DataFrame\n",
-    "df = pd.read_csv('output_file.csv', dtype={\"ARTNO\": str})\n",
+    "df = pd.read_csv('data/output_file.csv', dtype={\"ARTNO\": str})\n",
     "\n",
     "# Create an empty dictionary to store the article pick count\n",
     "article_count_dict = {}\n",
@@ -2315,7 +2315,7 @@
     "        article_count_dict[article] += 1\n",
     "\n",
     "# Read the unique_articles.csv file as a DataFrame\n",
-    "df_articles = pd.read_csv('unique_articles.csv', dtype={\"articles\": str}, on_bad_lines=\"skip\")\n",
+    "df_articles = pd.read_csv('data/unique_articles.csv', dtype={\"articles\": str}, on_bad_lines=\"skip\")\n",
     "\n",
     "# Create empty lists to store the search keys and corresponding popularity values\n",
     "article_list = []\n",
@@ -2334,19 +2334,19 @@
     "df_popularity = pd.DataFrame({'ARTNO': article_list, 'popularity': popularity_list})\n",
     "\n",
     "# Write the DataFrame to a new 'popularity.csv' file\n",
-    "df_popularity.to_csv('popularity.csv', index=False)\n"
+    "df_popularity.to_csv('data/popularity.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# load the pickHistoryOrderNo.csv file as a dataframe with the correct encoding\n",
-    "df = pd.read_csv('leanPicks.csv', encoding='iso-8859-1', on_bad_lines=\"skip\")\n",
+    "df = pd.read_csv('data/leanPicks.csv', encoding='iso-8859-1', on_bad_lines=\"skip\")\n",
     "\n",
     "# group the dataframe by 'ARTNO'\n",
     "artno_groups = df.groupby('ARTNO')\n",
@@ -2372,20 +2372,20 @@
     "result_df = pd.DataFrame(results)\n",
     "\n",
     "# write the dataframe to a new CSV file\n",
-    "result_df.to_csv('probability_results.csv', index=False)\n"
+    "result_df.to_csv('data/probability_results.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# load the probability_results.csv and popularity.csv files as dataframes\n",
-    "prob_df = pd.read_csv('probability_results.csv')\n",
-    "pop_df = pd.read_csv('popularity.csv')\n",
+    "prob_df = pd.read_csv('data/probability_results.csv')\n",
+    "pop_df = pd.read_csv('data/popularity.csv')\n",
     "\n",
     "# merge the two dataframes on the ARTNO column\n",
     "merged_df = pd.merge(prob_df, pop_df, on='ARTNO')\n",
@@ -2394,20 +2394,20 @@
     "new_df = merged_df[['ARTNO', 'popularity', 'TRUCK', 'COLLECT']].rename(columns={'TRUCK': 'Truck', 'COLLECT': 'Collect'})\n",
     "\n",
     "# write the dataframe to a new CSV file\n",
-    "new_df.to_csv('article_data.csv', index=False)\n"
+    "new_df.to_csv('data/article_data.csv', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# load the article_data.csv and correlation_matrix.csv files as dataframes\n",
-    "data_df = pd.read_csv('article_data.csv')\n",
-    "corr_df = pd.read_csv('correlation_matrix.csv')\n",
+    "data_df = pd.read_csv('data/article_data.csv')\n",
+    "corr_df = pd.read_csv('data/correlation_matrix.csv')\n",
     "\n",
     "# initialize an empty list to store the result dictionaries\n",
     "result = []\n",
@@ -2437,8 +2437,7 @@
     "\n",
     "# write the result list to a new CSV file\n",
     "result_df = pd.DataFrame(result)\n",
-    "result_df.to_csv('article_data_with_correlations.csv', index=False)\n",
-    "\n"
+    "result_df.to_csv('data/article_data_with_correlations.csv', index=False)"
    ]
   }
  ],
