Began building state space
began building the state space, started creating the distance calculator for the reward function

--- a/pickHistoryAnalysis.ipynb
+++ b/pickHistoryAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "['ISELL_ORDER_NUMBER\\tPICK_ID\\tARTNO   \\tARTNAME_UNICODE                                   \\tART_VOLUME_M3\\tORDERED_QTY\\tPICKED_QTY\\tOPEN_PICK_QTY\\tAVAILABLE_STOCK\\tPOSSIBLE_TO_FINISH\\tORDER_TYPE \\tDATE_OF_PAYMENT\\tTIME_OF_PAYMENT\\tEXCEPTION\\tPICK_AREA          \\tACTUAL_ORDER_STATUS\\tSTORAGE_STATUS\\tSTORAGE_USED\\tHANDOVER_POINT\\tCUT_OFF_DATE\\tCUT_OFF_TIME\\tUSER_PICKING\\tSERVICE_DATE\\tSERVICE_WINDOW\\tORDER_METHOD\\tPICK_LOCATION\\tPICK_LOCATION_TYPE\\tDELIVERY_METHOD                  ']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2291,7 +2291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2339,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2377,15 +2377,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# load the probability_results.csv and popularity.csv files as dataframes\n",
-    "prob_df = pd.read_csv('data/probability_results.csv')\n",
-    "pop_df = pd.read_csv('data/popularity.csv')\n",
+    "prob_df = pd.read_csv('data/probability_results.csv', dtype={\"ARTNO\": str})\n",
+    "pop_df = pd.read_csv('data/popularity.csv', dtype={\"ARTNO\": str})\n",
     "\n",
     "# merge the two dataframes on the ARTNO column\n",
     "merged_df = pd.merge(prob_df, pop_df, on='ARTNO')\n",
@@ -2399,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2457,7 +2457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
